--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,67 @@
 page-home {
-
+    .bck{
+        background-image: url('../../assets/imgs/4.jpg');
+        background-color: black;
+        background-size: cover;
+       background-repeat: no-repeat;
+       background-position: center;
+    }
+    .center{
+        text-align: center;
+    }
+    .round{
+        position: relative;
+        width: 300px;
+        height: 180px;
+        border:  2px solid rgba(255, 255, 255, 0);
+        border-radius: 100px ;
+        display: inline-block;
+    }
+    img{
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        top: 37%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+    h2{
+        font-size: 9vh
+    }
+    h1,h2,h3,p{
+        color: white;
+    }
+  .ide{
+      color: white;
+      position: absolute;
+      top: 95%;     
+  }
+ .bat{
+     position: absolute;
+    text-align: center;
+    top: 80%;
+    left: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   -moz-transform: translate(-50%, -50%);
+   -o-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+ }
+ ion-icon{
+     font-size: 250%;
+     color: white;
+ }
+ .tem{
+     top: 20%;
+     left: 50%;
+     font-size: 100%;
+ }
+ .fix{
+    text-align: center;
+ }
+ 
 }
